--- a/google-homepage/index.html
+++ b/google-homepage/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
     <head>
         <title>Google Homepage</title>
+        <link href="style.css" rel="stylesheet">
     </head>
     <body>
     <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
         <form>
             <input type="search" name="search-bar" id="search-bar" required>
-            <button>Search</button>
-            <button>I'm Feeling Lucky</button>
+            <div>
+                <button>Search</button>
+                <button>I'm Feeling Lucky</button>
+            </div>
         </form>
     </body>
 </html>
