trying out stylesheet

--- a/google-homepage/index.html
+++ b/google-homepage/index.html
@@ -5,10 +5,10 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
-    <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
+    <img class="center" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
         <form>
             <input type="search" name="search-bar" id="search-bar" required>
-            <div>
+            <div class="center">
                 <button>Search</button>
                 <button>I'm Feeling Lucky</button>
             </div>
